# HelloCMake

./: .travis.yml  CMakeLists.txt  README.md  build.sh  main.cpp  run_lcov.sh
lib/: CMakeLists.txt  Line.cpp  Line.h
test/: CMakeLists.txt  main.cpp  test_Line.cpp
